# pydsproutines

./: .gitignore  .gitmodules  BurstyFFTs.ipynb  BurstyFFTs_v2.ipynb  EllipticalDistributionsAndCombinations.ipynb  MLE_Multi_Signal.ipynb  PSKdemodulationTests.py  README.md  RTT_CRBs.ipynb  ToneDirectSpectralReproduction.ipynb  averagingEllipsesRoutines.py  burstyRoutines.py  cancellationRoutines.py  clusterRoutines.py  configRoutines.py  coordinateRoutines.py  cpfskTests.py  cpuTone.py  cpuToneDll.c  cpuWola.py  cpuWolaDll.c  cpuWolaDll_32fc.c  cpuWolaDll_choosethreads.c  crbRoutines.py  cupyCufftdx.py  cupyExtensions.py  cupyHelpers.py  cyclostationaryRoutines.py  cztRoutines.py  dashTest.py  deconvolutionTests.py  demodulationRoutines.py  demodulationTests.py  filterCreationRoutines.py  filterRoutines.py  gridSearchRoutines.py  hyperboloidRoutines.py  intelHelpers.py  ipp_ext.h  localizationRoutines.py  (+30 more)
benchmarks/: README.md  benchmark_cupyCopyAndConvert.py  benchmark_cupyTemplateCrossCorrelator.py  benchmark_cupyffts.py  benchmark_czts.py  benchmark_ffts.py  benchmark_filterkernels.py  benchmark_futureReader.py  benchmark_groupXcorrs.py  benchmark_maskedkernels.py  benchmark_matrixprofiles.py  benchmark_movAvgKernels.py  benchmark_movingAvgKernels.py  benchmark_multiTemplateDotKernels.py  benchmark_upfirdnkernels.py  benchmark_xcorrKernels.py  benchmark_xcorrs.py
configRoutines/: _core.py
custom_kernels/: argmax.cu  complex_magn.cu  copying.cu  cufftdxKernels.cu  demodulation.cu  eyeOpeningKernel.cu  filter.cu  genTones.cu  interpolator.cu  lockPhase_mapSyms_singleBlkKernel_qpsk.cu  maskedaccess.cu  matrixProfile.cu  multiplySlices.cu  peakfinding.cu  thresholding.cu  upfirdn.cu
cython_ext/: CyGroupXcorrFFT.cpp  CyGroupXcorrFFT.pyx  GroupXcorrFFT.cpp  GroupXcorrFFT.h  GroupXcorrFFT.pxd  PySampledLinearInterpolator.cpp  PySampledLinearInterpolator.pyx  PyViterbiDemodulator.cpp  PyViterbiDemodulator.pyx  README.md  SampledLinearInterpolator.cpp  SampledLinearInterpolator.h  SampledLinearInterpolator.pxd  build_all.bat  compareIntPreambles.c  compareIntPreambles.py  ipp_ext.h  setup_GroupXcorrFFT.py  setup_viterbiDemodulator.py  viterbiDemodulator.cpp  viterbiDemodulator.h  viterbiDemodulator.pxd  viterbiDemodulatorTest.cpp
notebooks/: Constant_Mod_Corr.ipynb  Notes_on_SGP4_Libraries.ipynb  OFDM_Tutorial.ipynb  RTT_CRBs.ipynb  ToneDirectSpectralReproduction.ipynb  Xcorr_Approach_CRB.ipynb
pybinds/: setup.py
pybinds/frequencyAdjuster/: CMakeLists.txt  README.md  frequencyAdjuster.cpp  pbffs.cpp  test.py
tests/: bpsk_or_qpsk_detection.py  compare_czt_impl.py  estimateFreqOffset_fft_vs_phase.py  exactPropagationTau.py  (+3 more)
(+66 files in other folders)
